fix alignment

--- a/www-develop/css/messenger.css
+++ b/www-develop/css/messenger.css
@@ -104,12 +104,13 @@
 .messenger-container .header .trip-preview {
     position: absolute;
     border-radius: 5px;
+    border-top-right-radius: 0;
     overflow: hidden;
-    right: 0;
+    right: 9px;
     top: 50px;
     background-color: #000;
     z-index: 999;
-    width: 100%;
+    width: 95%;
 }
 .messenger-container .header .trip-preview .result-content-bottom, .messenger-container .header trip-min-view .result-user-info {
     display: none;
